syntax = "proto3";

package nihility.execute;

enum AudioEndianness {
  Big = 0;
  Little = 1;
}

message AudioChunk {
  uint32 sample_rate = 1;
  uint32 sample_size = 2;
  uint32 channels = 3;
  bool sign = 4;
  AudioEndianness byte_order = 5;
  repeated float data = 6;
}

message ExecuteRequest {
  ExecuteType type = 1;
  bytes payload = 2;
}

enum ExecuteType {
  STRING = 0;
  AUDIO = 1;
}

message ExecuteResponse {
  ExecuteType type = 1;
  bytes payload = 2;
}

service Execute {
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
  rpc ExecuteStreamOut(ExecuteRequest) returns (stream ExecuteResponse);
  rpc ExecuteStream(stream ExecuteRequest) returns (stream ExecuteResponse);
}